compiler/testData/diagnostics/testsWithJsStdLib/native/nested/nativeInnerClassProhibited.kt
class A {
    <!NATIVE_INNER_CLASS_PROHIBITED!>@native inner class B<!>
}

@native class C {
    @native inner class D
}
